--- a/client/styles/master.scss
+++ b/client/styles/master.scss
@@ -1,6 +1,38 @@
 @import "./variables.scss";
 @import "./mixins.scss";
 
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: $blackest;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $black;
+  border-radius: 75px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $purple;
+}
+
+*, *::before, *::after {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+html {
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
 html, body {
     margin: 0;  
     padding: 0;
@@ -17,6 +49,9 @@ body {
 
 input, button {
     outline: 0;
+    
+    color: $white;
+    
     border: 0px;
 }
 
@@ -30,16 +65,10 @@ a, p, li {
     display: block;
     position: relative;
     width: 100%;
-
+    
     @include breakpoint(desktop) {
         max-width: 960px;
         margin: 0px auto;
-    }
-}
-
-.section.game-background {
-    img {
-        width: 100%;
     }
 }
 
