--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -31,6 +31,7 @@ $purple-light: var(--purple-light);
 
 // Shadows
 $defaultShadow: 0 3px 6px rgba(0,0,0,.24);
+$floatingShadow: 0 9px 16px rgba(0,0,0,.24);
 
 // fonts
 $OpenSans: "Open Sans", sans-serif;
